tests/baselines/reference/bestCommonTypeOfConditionalExpressions2.errors.txt
bestCommonTypeOfConditionalExpressions2.ts(4,14): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
bestCommonTypeOfConditionalExpressions2.ts(5,30): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
bestCommonTypeOfConditionalExpressions2.ts(6,31): error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
bestCommonTypeOfConditionalExpressions2.ts(12,17): error TS2454: Variable 'derived' is used before being assigned.


==== bestCommonTypeOfConditionalExpressions2.ts (4 errors) ====
    // conditional expressions return the best common type of the branches plus contextual type (using the first candidate if multiple BCTs exist)
    // these are errors
    
    class Base { foo: string; }
                 ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    class Derived extends Base { bar: string; }
                                 ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    class Derived2 extends Base { baz: string; }
                                  ~~~
!!! error TS2564: Property 'baz' has no initializer and is not definitely assigned in the constructor.
    var base: Base;
    var derived: Derived;
    var derived2: Derived2;
    
    var r2 = true ? 1 : '';
    var r9 = true ? derived : derived2;
                    ~~~~~~~
!!! error TS2454: Variable 'derived' is used before being assigned.
    
    function foo<T, U>(t: T, u: U) {
        return true ? t : u;
    }
    
    function foo2<T extends U, U>(t: T, u: U) { // Error for referencing own type parameter
        return true ? t : u; // Ok because BCT(T, U) = U
    }
    
    function foo3<T extends U, U extends V, V>(t: T, u: U) {
        return true ? t : u;
    }